Update ParseAllExampleTest.java